- Swagger Finalized for One Read and Write  - Model and Controller classes Re-geerated.
