# SMServer/Models/AdditionalInformation.cs
@@ -1,0 +1,136 @@
+/*
+ * Student Management Services
+ *
+ * The student management service(s) for reading student information and managing the grades. 
+ *
+ * OpenAPI spec version: 1.0.0-SNAPSHOT
+ * Contact: vrajesh.27@gmail.com
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+
+using System;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+
+namespace IO.Swagger.Models
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [DataContract]
+    public partial class AdditionalInformation : IEquatable<AdditionalInformation>
+    { 
+        /// <summary>
+        /// Gets or Sets Height
+        /// </summary>
+        [Required]
+        [DataMember(Name="height")]
+        public Height Height { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Weight
+        /// </summary>
+        [Required]
+        [DataMember(Name="weight")]
+        public Weight Weight { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class AdditionalInformation {\n");
+            sb.Append("  Height: ").Append(Height).Append("\n");
+            sb.Append("  Weight: ").Append(Weight).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (ReferenceEquals(null, obj)) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((AdditionalInformation)obj);
+        }
+
+        /// <summary>
+        /// Returns true if AdditionalInformation instances are equal
+        /// </summary>
+        /// <param name="other">Instance of AdditionalInformation to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(AdditionalInformation other)
+        {
+            if (ReferenceEquals(null, other)) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    Height == other.Height ||
+                    Height != null &&
+                    Height.Equals(other.Height)
+                ) && 
+                (
+                    Weight == other.Weight ||
+                    Weight != null &&
+                    Weight.Equals(other.Weight)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    if (Height != null)
+                    hashCode = hashCode * 59 + Height.GetHashCode();
+                    if (Weight != null)
+                    hashCode = hashCode * 59 + Weight.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(AdditionalInformation left, AdditionalInformation right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(AdditionalInformation left, AdditionalInformation right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
